@@ -194,32 +194,6 @@ newsitem_schema = {
         'data': {
             },
         },
-    'photo': {
-        'type': 'CPS Image Field',
-        'data': {
-                'default_expr': 'nothing',
-                'is_searchabletext': 0,
-            },
-        },
-    'photo_subtitle': {
-        'type': 'CPS String Field',
-        'data': {
-                'default_expr': 'string:',
-                'is_searchabletext': 1,
-            },
-        },
-    'photo_position': {
-        'type': 'CPS String Field',
-        'data': {
-            },
-        },
-    'photo_original': {
-        'type': 'CPS Image Field',
-        'data': {
-                'default_expr': 'nothing',
-                'is_searchabletext': 0,
-            },
-        },
     }
 
 ########################################################
